--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,6 +20,10 @@ nav {
   background-color: #f07841;
   height: 75px;
 }
+nav img {
+  width: 50px;
+  margin-right: 5px;
+}
 nav li {
   list-style: none;
   margin: 0 10px;
@@ -32,9 +36,9 @@ nav .nav-item a:hover {
   box-shadow: inset 0 -3px 0 0 #ffff00;
   color: #ffff00 !important;
 }
-nav img {
-  width: 50px;
-  margin-right: 5px;
+nav input {
+  border-radius: 0 !important;
+  max-width: 150px !important;
 }
 nav #User {
   color: #FFF;
@@ -42,6 +46,13 @@ nav #User {
 }
 nav #User:hover {
   color: #ffff00;
+}
+nav #Navbar.show {
+  background-color: #f59b72;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding-bottom: 30px;
 }
 
 #PopularCategories {
