--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,7 +13,7 @@ a {
 }
 
 .bg-lite-orange {
-  background-color: #f59b72;
+  background-color: #ffceb8;
 }
 
 nav {
@@ -32,13 +32,45 @@ nav .nav-item a {
   color: #FFF !important;
   font-size: 1.25em !important;
 }
-nav .nav-item a:hover {
+nav .nav-item .lite-yellow {
   box-shadow: inset 0 -3px 0 0 #ffff00;
+}
+nav .nav-item .lite-yellow:hover {
   color: #ffff00 !important;
+}
+nav .nav-item .blue {
+  box-shadow: inset 0 -3px 0 0 #4b2ac4;
+}
+nav .nav-item .blue:hover {
+  color: #4b2ac4 !important;
+}
+nav .nav-item .lite-blue {
+  box-shadow: inset 0 -3px 0 0 #38abd1;
+}
+nav .nav-item .lite-blue:hover {
+  color: #38abd1 !important;
+}
+nav .nav-item .green {
+  box-shadow: inset 0 -3px 0 0 #7dcf74;
+}
+nav .nav-item .green:hover {
+  color: #7dcf74 !important;
+}
+nav .nav-item .lite-grey {
+  box-shadow: inset 0 -3px 0 0 #dbdbdb;
+}
+nav .nav-item .lite-grey:hover {
+  color: #dbdbdb !important;
 }
 nav input {
   border-radius: 0 !important;
   max-width: 150px !important;
+  padding: 0.25rem !important;
+}
+nav input:focus {
+  border-color: rgba(239, 176, 104, 0.8) !important;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(239, 169, 104, 0.6) !important;
+  outline: 0 none;
 }
 nav #User {
   color: #FFF;
@@ -48,11 +80,16 @@ nav #User:hover {
   color: #ffff00;
 }
 nav #Navbar.show {
-  background-color: #f59b72;
+  background-color: #ffceb8;
   display: flex;
   justify-content: center;
   flex-direction: column;
   padding-bottom: 30px;
+  border: 1px solid #f07841;
+  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
+}
+nav #Navbar.show li {
+  margin-bottom: 10px;
 }
 
 #PopularCategories {
@@ -65,7 +102,7 @@ nav #Navbar.show {
   margin-top: 20px;
 }
 #PopularCategories #PetsCategoriesCarousel figure {
-  border: 1px solid #c0876c;
+  border: 2px solid #fff;
 }
 #PopularCategories #PetsCategoriesCarousel figure img {
   width: 240px;
@@ -95,8 +132,17 @@ nav #Navbar.show {
   padding-bottom: 20px;
 }
 #Tips .card a {
-  color: #f59b72;
+  color: #f07841;
 }
 #Tips .card a:hover {
-  color: #f07841;
+  color: #c0876c;
+}
+
+footer {
+  background-color: #f07841;
+  color: #FFF;
+  font-weight: 500;
+}
+footer p {
+  height: 100%;
 }
