--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,148 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,500&display=swap");
-body {
-  font-family: "Montserrat", sans-serif;
-}
-
-a {
-  text-decoration: none;
-}
-
-.row-header {
-  margin: 0px auto;
-  padding: 110px 0 0 0;
-}
-
-.bg-lite-orange {
-  background-color: #ffceb8;
-}
-
-nav {
-  background-color: #f07841;
-  height: 75px;
-}
-nav img {
-  width: 50px;
-  margin-right: 5px;
-}
-nav li {
-  list-style: none;
-  margin: 0 10px;
-}
-nav .nav-item a {
-  color: #FFF !important;
-  font-size: 1.25em !important;
-}
-nav .nav-item .lite-yellow {
-  box-shadow: inset 0 -3px 0 0 #ffff00;
-}
-nav .nav-item .lite-yellow:hover {
-  color: #ffff00 !important;
-}
-nav .nav-item .blue {
-  box-shadow: inset 0 -3px 0 0 #4b2ac4;
-}
-nav .nav-item .blue:hover {
-  color: #4b2ac4 !important;
-}
-nav .nav-item .lite-blue {
-  box-shadow: inset 0 -3px 0 0 #38abd1;
-}
-nav .nav-item .lite-blue:hover {
-  color: #38abd1 !important;
-}
-nav .nav-item .green {
-  box-shadow: inset 0 -3px 0 0 #7dcf74;
-}
-nav .nav-item .green:hover {
-  color: #7dcf74 !important;
-}
-nav .nav-item .lite-grey {
-  box-shadow: inset 0 -3px 0 0 #dbdbdb;
-}
-nav .nav-item .lite-grey:hover {
-  color: #dbdbdb !important;
-}
-nav input {
-  border-radius: 0 !important;
-  max-width: 150px !important;
-  padding: 0.25rem !important;
-}
-nav input:focus {
-  border-color: rgba(239, 176, 104, 0.8) !important;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(239, 169, 104, 0.6) !important;
-  outline: 0 none;
-}
-nav #User {
-  color: #FFF;
-  font-size: 1.3em;
-}
-nav #User:hover {
-  color: #ffff00;
-}
-nav #Navbar.show {
-  background-color: #ffceb8;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  padding-bottom: 30px;
-  border: 1px solid #f07841;
-  box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
-}
-nav #Navbar.show li {
-  margin-bottom: 10px;
-}
-
-#PopularCategories {
-  margin: 0px auto;
-  padding: 20px 0 0 0;
-  padding-bottom: 20px;
-}
-#PopularCategories #PetsCategoriesCarousel {
-  text-align: center;
-  margin-top: 20px;
-}
-#PopularCategories #PetsCategoriesCarousel figure {
-  border: 2px solid #fff;
-}
-#PopularCategories #PetsCategoriesCarousel figure img {
-  width: 240px;
-}
-#PopularCategories #PetsCategoriesCarousel figure figcaption {
-  color: #f07841;
-  font-size: 1.2em;
-  background-color: #FFF;
-}
-#PopularCategories #PetsCategoriesCarousel .carousel-indicators {
-  bottom: -30px;
-}
-#PopularCategories #PetsCategoriesCarousel .carousel-control-prev {
-  top: -25px;
-  left: 15px;
-  width: 5%;
-}
-#PopularCategories #PetsCategoriesCarousel .carousel-control-next {
-  top: -25px;
-  right: 15px;
-  width: 5%;
-}
-
-#Tips {
-  margin: 0px auto;
-  padding: 30px 0 0 0;
-  padding-bottom: 20px;
-}
-#Tips .card a {
-  color: #f07841;
-}
-#Tips .card a:hover {
-  color: #c0876c;
-}
-
-footer {
-  background-color: #f07841;
-  color: #FFF;
-  font-weight: 500;
-}
-footer p {
-  height: 100%;
-}
+@import url(https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,700;1,500&display=swap);body{font-family:Montserrat,sans-serif}a{text-decoration:none}.row-header{margin:0 auto;padding:110px 0 0 0}.bg-lite-orange{background-color:#ffceb8}nav{background-color:#f07841;height:75px}nav img{width:50px;margin-right:5px}nav li{list-style:none;margin:0 10px}nav .nav-item a{color:#fff!important;font-size:1.25em!important}nav .nav-item .lite-yellow{box-shadow:inset 0 -3px 0 0 #ff0}nav .nav-item .lite-yellow:hover{color:#ff0!important}nav .nav-item .blue{box-shadow:inset 0 -3px 0 0 #4b2ac4}nav .nav-item .blue:hover{color:#4b2ac4!important}nav .nav-item .lite-blue{box-shadow:inset 0 -3px 0 0 #38abd1}nav .nav-item .lite-blue:hover{color:#38abd1!important}nav .nav-item .green{box-shadow:inset 0 -3px 0 0 #7dcf74}nav .nav-item .green:hover{color:#7dcf74!important}nav .nav-item .lite-grey{box-shadow:inset 0 -3px 0 0 #dbdbdb}nav .nav-item .lite-grey:hover{color:#dbdbdb!important}nav input{border-radius:0!important;max-width:150px!important;padding:.25rem!important}nav input:focus{border-color:rgba(239,176,104,.8)!important;box-shadow:0 1px 1px rgba(0,0,0,.075) inset,0 0 8px rgba(239,169,104,.6)!important;outline:0 none}nav #User{color:#fff;font-size:1.3em}nav #User:hover{color:#ff0}nav #Navbar.show{background-color:#ffceb8;display:flex;justify-content:center;flex-direction:column;padding-bottom:30px;border:1px solid #f07841;box-shadow:0 .125rem .25rem rgba(0,0,0,.075)!important}nav #Navbar.show li{margin-bottom:10px}#PopularCategories{margin:0 auto;padding:20px 0 0 0;padding-bottom:20px}#PopularCategories #PetsCategoriesCarousel{text-align:center;margin-top:20px}#PopularCategories #PetsCategoriesCarousel figure{border:2px solid #fff}#PopularCategories #PetsCategoriesCarousel figure img{width:240px}#PopularCategories #PetsCategoriesCarousel figure figcaption{color:#f07841;font-size:1.2em;background-color:#fff}#PopularCategories #PetsCategoriesCarousel .carousel-indicators{bottom:-30px}#PopularCategories #PetsCategoriesCarousel .carousel-control-prev{top:-25px;left:15px;width:5%}#PopularCategories #PetsCategoriesCarousel .carousel-control-next{top:-25px;right:15px;width:5%}#Tips{margin:0 auto;padding:30px 0 0 0;padding-bottom:20px}#Tips .card a{color:#f07841}#Tips .card a:hover{color:#c0876c}footer{background-color:#f07841;color:#fff;font-weight:500}footer p{height:100%}
